<resources>
    <string name="app_name">PPL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_workout">add workout</string>
    <string name="workout_title_hint">Title</string>
    <string name="workout_description_hint">Description</string>
    <string name="workout_sets_hint">Sets</string>
    <string name="workout_reps_hint">Reps</string>
    <string name="workout_type_hint">Type</string>
    <string name="workout_weights_hint">Weight(kg)</string>

    <string-array name="ppl_strings">
        <item>Push</item>
        <item>Pull</item>
        <item>Legs</item>
    </string-array>
</resources>